2002-10-14  Max Horn  <max@quendi.de>

	* Validation.pm: Recognize Tar??FilesRename field

	* Engine.pm: Once more install all splitoffs with a single call to dpkg
	  (this is done to avoid certain update troubles with splitoffs).

	* PkgVersion.pm: Allow percent expansion in CustomMirror field
	 (patch #621175, thanks to Ben Hines)

	* Engine.pm: Rewrote parts of real_install to hopefully make it cleaner,
	  easier to understand, and less buggy when it comes to splitoffs.

2002-10-12 Dave Morrison <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: When a Shlibs field is present, write its contents 
	into DEBIAN/shlibs when building the deb

	* Validation.pm: Added Shlibs field
	
2002-10-10  Max Horn  <max@quendi.de>

	* Validation.pm: Added RunTimeVars field; warn if description ends with "."

2002-10-04  Benjamin Reed <rangerrick@users.sourceforge.net>

	* Engine.pm: Another small patch to the splitoff code.  This patch
	  changes the checking for flags (reinstall, rebuild, etc.) to match
	  the code used for installing the primary package, and it makes
	  sure that the parent splitoff is the last one installed on the
	  dpkg command-line to fix goofy dpkg ordering issues.

2002-09-28  Ben Hines <bhines@alumni.ucsd.edu>

	* PkgVersion.pm, NetAccess.pm: Patch 612681: Allow "continue" 
	  for bad MD5 during "fink install... "

	* PkgVersion.pm: Fix Axel problem with partial downloads

	* PkgVersion.pm: Change some tarballs to "file"s

2002-09-28  Benjamin Reed <rangerrick@users.sourceforge.net>

	* Engine.pm: small patch to fix 'fink rebuild' and possibly some other
	  buglets that could sneak through.  If a package has splitoffs, it was
	  sometimes getting marked as "already activated" even if it was set to
	  be explicitly reinstalled.

2002-09-25  Benjamin Reed <rangerrick@users.sourceforge.net>

	* Engine.pm: fixed so that the rest of a splitoff doesn't get
	  reinstalled if just one package from the splitoff is being installed
